--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -6,6 +6,17 @@
     android:background="#fff">
 
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="课程列表"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
     <com.example.shoppingmall.home.Adapter.NoScrollGridView
         android:id="@+id/gc_video_list"
         android:layout_width="wrap_content"
