详情页面目录实现

--- a/app/src/main/res/layout/fragment_home_header.xml
+++ b/app/src/main/res/layout/fragment_home_header.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="10dp"/>
 
     <EditText
-        android:id="@+id/search_text"
+        android:id="@+id/search_content"
         android:layout_width="250dp"
         android:layout_height="35dp"
         android:layout_marginLeft="10dp"
