--- a/app/src/main/res/layout/activity_video_cart.xml
+++ b/app/src/main/res/layout/activity_video_cart.xml
@@ -41,6 +41,7 @@
         android:background="#eeee" />
 
     <FrameLayout
+        android:id="@+id/fl_shopcart_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
